# inf200-advanced-programming

./: .gitignore  README.md
exercises/week_38/: head.py  read_weather.py  read_weather_alts.py  tail.py  weather_umb_2012.csv
exercises/week_40/: lists_to_records.py  prime_sieve.py  records_to_pandas.py
exercises/week_41/: bubble_sort.py  horner.py  letter_counts.py  tidy_code_clean.py
exercises/week_44_deliverable_2/: election_evaluation.ipynb  seats_table.txt  votes_to_mandates.py  votes_to_mandates_alt_solution.py  votes_to_mandates_solution.py
exercises/week_46_deliverable_3/: complex.py  examples.py  test_complex.py
exercises/week_48_deliverable_4/: sir_model.ipynb
january_block/examples/chutes_project/: setup.cfg
january_block/examples/chutes_project/src/chutes/: __init__.py  helpers.py
january_block/lectures/: Exam_and_Evaluation.ipynb  INF200_H20_Ju08_ModelDynamics.ipynb  INF200_H21_Ja01.ipynb  INF200_H21_Ja02.ipynb  INF200_H21_Ja03.ipynb  INF200_H21_Ja04.ipynb  INF200_H21_Ja05.ipynb  INF200_H21_Ja06.ipynb  INF200_H21_Ja07.ipynb  INF200_H21_Ja08.ipynb  INF200_H21_Ja09.ipynb
june_block/lectures/: INF200_H21_Ju01.ipynb  INF200_H21_Ju02.ipynb  INF200_H21_Ju03.ipynb  INF200_H21_Ju04.ipynb  INF200_H21_Ju05.ipynb  INF200_H21_Ju06.ipynb  INF200_H21_Ju07.ipynb  INF200_H21_Ju08.ipynb  INF200_H21_Ju09.ipynb
lectures/l01/: 2021-09-08_party distribution_1_st_2017.csv  INF200_H21_L01.ipynb
lectures/l02/: Aas dogn 2003-2012.xlsx  INF200_H21_L02.ipynb  books.csv  students.txt  students_with_birthday.txt  students_with_header.txt  testfile_latin1.txt  testfile_plain.txt  testfile_utf8.txt  testfile_win_utf8.txt
lectures/l03/: INF200_H21_L03.ipynb
lectures/l04/: INF200_H21_L04.ipynb
lectures/l05/: README.md
lectures/l07/: INF200_H21_L07.ipynb  chutes_classes.py  (+4 more)
technical/: inf200_conda_env.yml  inf200_nomkl_conda_env.yml
(+98 files in other folders)
